# Talleyrand

./: .gitignore  CMakeLists.txt  Makefile  README.md  Talleyrand  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: file_manager.cpp  file_manager.h  screen_component.cpp  screen_component.h
